# PostgraduateStudiesAssignment3

./: README.md  pyproject.toml
src/assignment_project3/: __init__.py  alembic.ini  main.py  models.py
src/assignment_project3/alembic/: env.py
